# KTB4-Vicki-AI

./: .gitignore
01/: README.md
01/gitmsg/: main.py
01/gitmsg/analyzer/: detector.py  diff.py  files.py  summary.py
01/gitmsg/ui/: formatter.py
02/: HTTP.md  README.md
02/community-project/: README.md  database.py  main.py  models.py  pyproject.toml  review.md  schemas.py
02/community-project/repositories/: comments.py  posts.py  users.py
02/community-project/routers/: comments.py  posts.py  users.py
02/community-project/services/: ai_service.py  comments.py  posts.py  users.py
04/: 후기.md
05/: README.md  후기1.md
06/: README.md
06/rag/: README.md  pyproject.toml  ragas_result.csv
06/rag/app/: main.py
06/rag/app/core/: lifespan.py
06/rag/app/models/: chat_model.py
06/rag/app/routers/: chat_router.py  file_router.py
06/rag/app/services/: chunk_service.py  document_loader.py  embedding_service.py  file_storage_service.py  llm_service.py  rag_service.py  vector_store_service.py
06/rag/app/utils/: logging.py
06/rag/eval/: eval_dataset.py  evaluate_rag.py  llm_judge.py
ReAct-miniproject/: factcheck.py  main.py  mcp_client.py  naver_news.py  pyproject.toml  wikipedia.py
chatbot/: README.md  ingest.py  pyproject.toml
chatbot/doc/: retro-7th-week.md
chatbot/eval/: evaluate_rag.py
chatbot/src/: memory_manager.py  rag_manager.py  vector_store_manager.py
chatbot/src/api/: main.py
