[project]
name = "react-miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.1.0",
    "wikipedia-api>=0.15.0",
]
