[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.138.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.1",
    "lxml>=6.1.1",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
