[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "docling>=2.99.0",
    "fastapi[standard]>=0.138.0",
    "langchain-community==0.3.7",
    "langchain-huggingface>=0.2.0",
    "networkx>=3.6.1",
    "numpy>=1.26.4",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "ragas>=0.4.3",
    "router>=0.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
